{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 256,
  "lineage": "6d0678a3-fe66-a1bd-3a62-5d6600c0bbad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "devops_cource-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:682764891375:loadbalancer/tf-lb-20210504114728549300000001",
            "availability_zones": [
              "eu-central-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "tf-lb-20210504114728549300000001-131659731.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "tf-lb-20210504114728549300000001",
            "idle_timeout": 400,
            "instances": [
              "i-030fceaa7201a61ee",
              "i-0657d7797868c3cae"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "tf-lb-20210504114728549300000001",
            "security_groups": [
              "sg-0273dad376a0312cb"
            ],
            "source_security_group": "682764891375/devops_cource-all",
            "source_security_group_id": "sg-0273dad376a0312cb",
            "subnets": [
              "subnet-03a926e745e50a480"
            ],
            "tags": {
              "Name": "devops_cource-elb"
            },
            "tags_all": {
              "Name": "devops_cource-elb"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_instance.windows-instance-1",
            "aws_instance.windows-instance-2",
            "aws_security_group.devops_cource-all",
            "aws_subnet.devops-subnet-public-1",
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f7491af5eef733a",
            "arn": "arn:aws:ec2:eu-central-1:682764891375:instance/i-0657d7797868c3cae",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0657d7797868c3cae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "khilkov",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0141c1066bc3ce4dc",
            "private_dns": "ip-172-31-3-48.eu-central-1.compute.internal",
            "private_ip": "172.31.3.48",
            "public_dns": "ec2-3-120-193-49.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.120.193.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091bb3fa900d73f68",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a926e745e50a480",
            "tags": {
              "Name": "windows-instance-1"
            },
            "tags_all": {
              "Name": "windows-instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0273dad376a0312cb"
            ]
          },
          "dependencies": [
            "aws_security_group.devops_cource-all",
            "aws_subnet.devops-subnet-public-1",
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f7491af5eef733a",
            "arn": "arn:aws:ec2:eu-central-1:682764891375:instance/i-030fceaa7201a61ee",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030fceaa7201a61ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "khilkov",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0889fd23a3c20b03e",
            "private_dns": "ip-172-31-12-213.eu-central-1.compute.internal",
            "private_ip": "172.31.12.213",
            "public_dns": "ec2-18-197-106-72.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.106.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0398f6dd9c67d5c2b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03a926e745e50a480",
            "tags": {
              "Name": "windows-instance-2"
            },
            "tags_all": {
              "Name": "windows-instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0273dad376a0312cb"
            ]
          },
          "dependencies": [
            "aws_security_group.devops_cource-all",
            "aws_subnet.devops-subnet-public-1",
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_cource-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682764891375:internet-gateway/igw-0108cea7655ca6a44",
            "id": "igw-0108cea7655ca6a44",
            "owner_id": "682764891375",
            "tags": {
              "Name": "devops_cource-igw"
            },
            "tags_all": {
              "Name": "devops_cource-igw"
            },
            "vpc_id": "vpc-0ccdf1c502f5fc3af"
          },
          "dependencies": [
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_cource-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682764891375:route-table/rtb-0549c68ab9898a817",
            "id": "rtb-0549c68ab9898a817",
            "owner_id": "682764891375",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0108cea7655ca6a44",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops_cource-rt"
            },
            "tags_all": {
              "Name": "devops_cource-rt"
            },
            "vpc_id": "vpc-0ccdf1c502f5fc3af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_cource-igw",
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops_cource-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d86598e6811803ac",
            "route_table_id": "rtb-0549c68ab9898a817",
            "subnet_id": "subnet-03a926e745e50a480"
          },
          "dependencies": [
            "aws_internet_gateway.devops_cource-igw",
            "aws_route_table.devops_cource-rt",
            "aws_subnet.devops-subnet-public-1",
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops_cource-crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7e4465c3224f7df",
            "route_table_id": "rtb-0549c68ab9898a817",
            "subnet_id": "subnet-0a45dff1b3e69760c"
          },
          "dependencies": [
            "aws_internet_gateway.devops_cource-igw",
            "aws_route_table.devops_cource-rt",
            "aws_subnet.devops-subnet-public-2",
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_cource-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682764891375:security-group/sg-0273dad376a0312cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0273dad376a0312cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "devops_cource-all",
            "name_prefix": "",
            "owner_id": "682764891375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_cource-all"
            },
            "tags_all": {
              "Name": "devops_cource-all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccdf1c502f5fc3af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682764891375:subnet/subnet-03a926e745e50a480",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-03a926e745e50a480",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682764891375",
            "tags": {
              "Name": "devops-subnet-public-1"
            },
            "tags_all": {
              "Name": "devops-subnet-public-1"
            },
            "vpc_id": "vpc-0ccdf1c502f5fc3af"
          },
          "dependencies": [
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682764891375:subnet/subnet-0a45dff1b3e69760c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0a45dff1b3e69760c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "682764891375",
            "tags": {
              "Name": "devops-subnet-public-2"
            },
            "tags_all": {
              "Name": "devops-subnet-public-2"
            },
            "vpc_id": "vpc-0ccdf1c502f5fc3af"
          },
          "dependencies": [
            "aws_vpc.devops_cource-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_cource-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:682764891375:vpc/vpc-0ccdf1c502f5fc3af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-083b9c3e25cbc00cb",
            "default_route_table_id": "rtb-0cbfb7c73bfbd1c55",
            "default_security_group_id": "sg-000c7cc4488532143",
            "dhcp_options_id": "dopt-ddb929b7",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ccdf1c502f5fc3af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cbfb7c73bfbd1c55",
            "owner_id": "682764891375",
            "tags": {
              "Name": "devops_cource-vpc"
            },
            "tags_all": {
              "Name": "devops_cource-vpc"
            }
          }
        }
      ]
    }
  ]
}